build/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: aproton
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: home.aproton.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: api-service
            port: 
              number: 8080
